--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <div class="logo">Beauty <span>Zone</span></div>
                 </a>
                 <ul class="header__menu">
-                    <li><a class="link" href="#about-section">Про нас</a></li>
-                    <li><a class="link" href="#advantages-section">Чому ми</a></li>
-                    <li><a class="link" href="#procedures-section">Наші процедури</a></li>
-                    <li><a class="link" href="#contacts-section">Контакти</a></li>
+                    <li><a class="about-link link" href="#about-section">Про нас</a></li>
+                    <li><a class="advantages-link link" href="#advantages-section">Чому ми</a></li>
+                    <li><a class="procedures-link link" href="#procedures-section">Наші процедури</a></li>
+                    <li><a class="contacts-link link" href="#contacts-section">Контакти</a></li>
                 </ul>
                 <div class="header__socials">
                     <a class="header__socials-link" href="tel:+38(096)0000007">
